--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,14 +3,18 @@ a{
     padding: 0;
 }
 
+@font-face{
+    font-family: 'Futura'; src: url(../fonts/Futura.ttf);
+}
+
 body{
     background-image: url(../images/moonrise-beach.jpg);
 }
 
 h1{
-    font-size: 57px;
-    color: yellow;
-    /* TODO: try to animate text coming down from top of screen */
+    font-family: 'Futura', Arial, Helvetica, sans-serif;
+    font-size: 60px;
+    
 }
 
 h2{
@@ -20,31 +24,40 @@ h2{
 }
 
 #titleSection{
-    text-align: center;
-    
+    text-align: center;   
 }
 
+.jumbotron{
+    text-align: center;
+    padding: 5px auto;
+    margin: 0;
+    color: #efd319
+}
 #timerSection{
     box-sizing: border-box;
-    padding 20px;
+    padding: 5px;
 }
 
-p{
-    text-align: center;
-    color: whitesmoke;
-    font-family: Arial, Helvetica, sans-serif;
+.button{
+    font-family: 'Futura', Arial, Helvetica, sans-serif;
+    font-size: 28px;
+    color: #666666;
+    padding: 5px 40px;
+    display: block, center;
+    width: 50%; 
+    margin: 5px;
+    background-color: gainsboro;
 }
 
-#box-1{
+#triviaSection{
     box-sizing: border-box;
     margin: 0 280px;
     color: whitesmoke;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Futura', Arial, Helvetica, sans-serif;
     text-align: center;
     font-size: 20px;
 }
 
 #answer{
     padding: 15px 0;
-    line-height: 5em;
 }
