--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ h2{
     background-color: gainsboro;
 }
 
-#triviaSection{
+#mainArea{
     box-sizing: border-box;
     margin: 0 280px;
     color: whitesmoke;
